--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-bottom-scroll-listener": "^2.1.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "uuid": "^3.3.2"
